<resources>
    <string name="app_name">Difficult Intubation</string>
    <string name="main_activity_greeting">Difficult Intubation</string>
    <string name="start_scanner_button">Scan QR Code</string>
    <string name="view_my_information_button">View My Information</string>
    <string name="return_to_scanner_button">Return to QR Code Scanner</string>
    <string name="detected_invalid_barcode">Invalid Barcode Detected!</string>
    <string name="export_button">Export</string>
    <string name="save_button">Save</string>
    <string name="chooser_message">Export</string>
    <string name="terms_of_service_title">Terms of Service</string>
    <string name="accept_terms_of_service_button">I Accept</string>
    <string name="decline_terms_of_service_button">I Decline</string>
    <string name="file_not_found">Error occurred while retrieving your information. Please scan your QR code again.</string>
    <string name="scan_new_qr_code">Scan QR Code</string>
    <string name="start_scanner_prompt">\nHas your health care provider given you a new "Difficult Intubation" form?\n\nScan the included QR Code here :</string>
    <string name="view_my_information_prompt">\nHave you already scanned the QR Code included in your "Difficult Intubation" form?\n\nView an electronic copy of it here :</string>
</resources>
