<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jeffh.difficultintubation.MainActivity">

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_scanner_prompt"/>
        <Button
            android:id="@+id/start_scanner_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_scanner_button"/>
        <TextView
            android:id="@+id/view_information_prompt_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_my_information_prompt"/>
        <Button
            android:id="@+id/view_information_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_my_information_button"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/icon_intubation_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/difficult_intubation_icon"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
