<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jeffh.difficultintubation.DisplayDetectedBarcodeActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/invalid_barcode_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detected_invalid_barcode"
                android:gravity="center"/>
            <Button
                android:id="@+id/return_to_scanner_activity_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/return_to_scanner_button"/>
            <TextView
                android:id="@+id/readable_decoded_barcode_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/share_buttons_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/save_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save_button"/>
                <Button
                    android:id="@+id/export_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/export_button"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
